[package]
name = "importee"
version = "0.1.0"
edition = "2021"

[lib]
name = "importee"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
once_cell = "1"
rustpython-parser = "0.3"
rustpython-ast = "0.3"
blake3 = "1"
rayon = "1.10"
globset = "0.4"
dashmap = "6.1"


