[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[project]
name = "importee"
version = "0.1.0"
description = "Python import checker with Rust backend"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Duboisset Nathan", email = "nathan.duboisset@gmail.com" }]
keywords = ["linter", "imports", "python", "rust", "code-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
urls = { Homepage = "https://github.com/NathanDuboisset/importee", Repository = "https://github.com/NathanDuboisset/importee", Issues = "https://github.com/NathanDuboisset/importee/issues" }
dependencies = [
    "click>=8.1,<9",
    "tomli>=2.03",
]

[project.optional-dependencies]
dev = ["maturin>=1.7,<2"]

[project.scripts]
importee = "importee.cli:cli"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "importee._rust"
bindings = "pyo3"


# Example configuration for testing
[tool.importee]
source_module = ["importee"]

[tool.importee.rules]

[tool.importee.rules.linear]
order = ["rules", "config","checker", "api"]
